Added the boxes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Navigation Bar -->
     <div class="navbar">
     <div class="topnav" id="myTopnav">
   <a href="/" class="active">Home</a>
@@ -18,6 +19,29 @@
   </a>
 </div>
  </div>
+ 
+ <!-- Main Section -->
+
+   <div class="main">
+    <div class="box1"></div>
+    <div class="box2">
+        <img src="/e-cell-mnnit-squarelogo-1663839558030 1.png" alt="e-cell-img"/>
+    </div>
+
+    <div class="box3">
+        <div class="boxcontainer">
+        <div class="boxgrid" id="b1"></div>
+        <div class="boxgrid" id="b2"></div>
+        <div class="boxgrid" id="b3"></div>
+        <div class="boxgrid" id="b4"></div>
+        <div class="boxgrid" id="b5"></div>
+        <div class="boxgrid" id="b6"></div>
+        <div class="boxgrid" id="b7"></div>
+        <div class="boxgrid" id="b8"></div>
+        <div class="boxgrid" id="b9"></div>
+        </div>
+    </div>
+   </div>
      <script src="/script.js"></script>
 </body>
 </html>
