--- a/index.html
+++ b/index.html
@@ -6,19 +6,23 @@
     <title>E-cell</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
+      <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+     <link
+      href="https://fonts.googleapis.com/css2?family=Inter&family=Work+Sans:wght@300&display=swap"
+      rel="stylesheet"
+    />
 </head>
 <body>
     <!-- Navigation Bar -->
-    <div class="navbar">
-    <div class="topnav" id="myTopnav">
-  <a href="/" class="active">Home</a>
-  <a href="">Grid</a>
-  <a href="https://www.linkedin.com/in/mangal-gupta-a981ba254/" target="_blank">LinkedIn</a>
-  <a  class="icon" onclick="handleNavbar()">
-    <i class="fa fa-bars"></i>
-  </a>
-</div>
- </div>
+  <div class="navBar" id="myTopnav">
+      <a href="">Home</a>
+      <a href="">Grid</a>
+      <a href="https://www.linkedin.com/in/shivansh-mishra-2four3/">LinkedIn</a>
+      <a href="javascript:void(0);" class="icon" onclick="toggleNav()">☰</a>
+    </div>
+    <hr />
+
  
  <!-- Main Section -->
 
