--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="navBar" id="myTopnav">
       <a href="">Home</a>
       <a href="">Grid</a>
-      <a href="https://www.linkedin.com/in/shivansh-mishra-2four3/">LinkedIn</a>
+      <a href="https://www.linkedin.com/in/mangal-gupta-a981ba254" target="_blank">LinkedIn</a>
       <a href="javascript:void(0);" class="icon" onclick="toggleNav()">☰</a>
     </div>
     <hr />
@@ -27,13 +27,13 @@
  <!-- Main Section -->
 
    <div class="main">
-    <div class="box1"></div>
-    <div class="box2">
-        <img src="/e-cell-mnnit-squarelogo-1663839558030 1.png" alt="e-cell-img"/>
+    <div class=" boxes box1"></div>
+    <div class=" boxes box2">
+        <img src="/e-cell-mnnit-squarelogo-1663839558030 1.png" alt="e-cell-img" class="logo"/>
     </div>
 
-    <div class="box3">
-        <div class="boxcontainer">
+    <div class=" boxes  box3 container">
+        <div class="grid">
         <div class="boxgrid" id="b1"></div>
         <div class="boxgrid" id="b2"></div>
         <div class="boxgrid" id="b3"></div>
