--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body>
     <!-- Navigation Bar -->
   <div class="navBar" id="myTopnav">
-      <a href="">Home</a>
-      <a href="">Grid</a>
+      <a href="/profile.html">Home</a>
+      <a href="/">Grid</a>
       <a href="https://www.linkedin.com/in/mangal-gupta-a981ba254" target="_blank">LinkedIn</a>
       <a href="javascript:void(0);" class="icon" onclick="toggleNav()">☰</a>
     </div>
@@ -31,7 +31,7 @@
     <div class=" boxes box2">
         <img src="/e-cell-mnnit-squarelogo-1663839558030 1.png" alt="e-cell-img" class="logo"/>
     </div>
-
+  
     <div class=" boxes  box3 container">
         <div class="grid">
         <div class="boxgrid" id="b1"></div>
